triviagame/force-app/main/default/objects/ParticipantActivityEnhanced__e/ParticipantActivityEnhanced__e.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: these events will be published by ParticipantActivityMasterTrigger after enriching the payload and will be handled by EmpApi in TriviaGame lightning component</description>
    <label>ParticipantActivityEnhanced</label>
    <pluralLabel>ParticipantActivityEnhanced</pluralLabel>
</CustomObject>