triviagame/force-app/main/default/objects/ParticipantActivityEnhanced__e/fields/GameId__c.field-meta.xml
<CustomField>
    <fullName>GameId__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Game Identifier</description>
    <label>GameId</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>