triviagame/force-app/main/default/objects/ParticipantActivityEnhanced__e/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: MobileNumber of the participant</description>
    <label>MobileNumber</label>
    <length>40</length>
    <type>Text</type>
</CustomField>