triviagame/force-app/main/default/objects/ParticipantActivityEnhanced__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Even payload</description>
    <label>Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>