triviagame/force-app/main/default/objects/ParticipantActivityEnhanced__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Type of event</description>
    <inlineHelpText>type of event</inlineHelpText>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>